--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>JOMACS Releases Nexus Repository</name>
-	      <url>http://172.31.20.92:8081/repository/gtb-release/url>
+	      <url>http://172.31.20.92:8081/repository/gtb-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
